# pegasus-chat-demo

./: MANIFEST.in  README.md  pyproject.toml
pegasus_chat_demo/: apps.py  consumers.py  routing.py  urls.py  views.py
pegasus_chat_demo/templates/chat_demo/: single_chat.html
pegasus_chat_demo/templates/pegasus_chat_demo/ws/: chat_message.html
